<resources>
    <string name="app_name">NytApp</string>
    <string name="top_stories">top stories</string>
    <string name="time_and_author_name">%1$s | %2$s</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="menu_top_stories">Stories</string>
    <string name="menu_books">Books</string>
    <string name="menu_movie_review">Review</string>
    <string name="menu_most_popular">Popular</string>
    <string name="menu_archive">Archive</string>

    <string-array name="top_story_sections">
        <item>home</item>
        <item>opinion</item>
        <item>world</item>
        <item>national</item>
        <item>politics</item>
        <item>upshot</item>
        <item>nyregion</item>
        <item>business</item>
        <item>technology</item>
        <item>science</item>
        <item>health</item>
        <item>sports</item>
        <item>arts</item>
        <item>books</item>
        <item>movies</item>
        <item>theater</item>
        <item>sundayreview</item>
        <item>fashion</item>
        <item>magazine</item>
        <item>food</item>
        <item>travel</item>
        <item>tmagazine</item>
        <item>realestate</item>
        <item>automobiles</item>
        <item>obituaries</item>
        <item>insider</item>
    </string-array>

</resources>
